--- a/LampShade/ServiceHost/Pages/Shared/Components/ProductCategoryWithProduct/Default.cshtml
+++ b/LampShade/ServiceHost/Pages/Shared/Components/ProductCategoryWithProduct/Default.cshtml
@@ -58,7 +58,7 @@
 <div class="col">
                                                 <div class="single-grid-product">
                                                     <div class="single-grid-product__image">
-                                                        @if (product.HasDiscouont)
+                                                        @if (product.HasDiscount)
                                                         {
                                                             <div class="single-grid-product__label">
                                                                 <span class="sale">-@product.DiscountRate%</span>
@@ -92,7 +92,8 @@
                                                         </h3>
                                                         <p class="single-grid-product__price">
                                                             
-                                                            @if(@product.HasDiscouont){
+                                                            @if(@product.HasDiscount)
+                                                            {
                                                             <span class="discounted-price">@product.PriceWithDiscount تومان</span>
                                                             <span class="main-price discounted">@product.Price تومان</span>
                                                             }
