--- a/LampShade/ServiceHost/Areas/Administration/Pages/Shop/ProductCategories/Edit.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Shop/ProductCategories/Edit.cshtml
@@ -7,12 +7,15 @@
     <h4 class="modal-title">ویرایش گروه محصول : @Model.Name</h4>
 </div>
 @*//jahat estefad dar site.js --->data-ajax="true"*@
+@*enctype="multipart/form-data"
+جهت فایل آپلود می باشد*@
 <form asp-page="./Index" asp-page-handler="Edit"
       method="post"
       data-ajax="true"
       data-callback=""
       data-action="Refresh"
       enctype="multipart/form-data">
+
     <div class="modal-body">
         <div class="row">
             <div class="col-md-6">
@@ -23,7 +26,8 @@
                     <input type="text" class="form-control" asp-for="Name">
                     <span asp-validation-for="Name" class="error"></span>
                 </div>
-            </div><div class="col-md-6">
+            </div>
+            <div class="col-md-6">
                 <div class="form-group">
                     <label asp-for="Slug" class="control-label">اسلاگ</label>
                     <input type="text" class="form-control" asp-for="Slug">
@@ -36,7 +40,7 @@
                 <div class="form-group">
                     <label asp-for="Picture" class="control-label">عکس</label>
                     @*<input type="file" class="form-control" asp-for="Picture" accept="image/*">*@
-                    <input type="text" class="form-control" asp-for="Picture">
+                    <input type="file" class="form-control" asp-for="Picture">
                     <span asp-validation-for="Picture" class="error"></span>
                 </div>
             </div>
@@ -86,7 +90,7 @@
                 </div>
             </div>
         </div>
-        <input type="hidden" asp-for="Id" value="@Model.Id"/>
+        <input type="hidden" asp-for="Id" value="@Model.Id" />
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default waves-effect" data-dismiss="modal">بستن</button>
