--- a/LampShade/ServiceHost/Pages/ProductCategory.cshtml
+++ b/LampShade/ServiceHost/Pages/ProductCategory.cshtml
@@ -90,7 +90,7 @@
                                                   
                                                    }
                                                     <a href="single-product.html">
-                                                        <img src="@product.Picture"  class="img-fluid"
+                                                        <img src="~/ProductPictures/@product.Picture"  class="img-fluid"
                                                              alt="@product.PictureTitle" title="@product.PictureTitle">
                                                      </a>
 
