--- a/LampShade/ServiceHost/Areas/Administration/Pages/Shop/ProductCategories/Edit.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Shop/ProductCategories/Edit.cshtml
@@ -40,7 +40,8 @@
                 <div class="form-group">
                     <label asp-for="Picture" class="control-label">عکس</label>
                     @*<input type="file" class="form-control" asp-for="Picture" accept="image/*">*@
-                    <input type="file" class="form-control" asp-for="Picture">
+                    @* accept="Image/*"  یعنی از عکس ها با هر پسوندی*@
+                    <input type="file" class="form-control" asp-for="Picture" accept="Image/*">
                     <span asp-validation-for="Picture" class="error"></span>
                 </div>
             </div>
