کامل کردن فایل آپلود برای همه قسمت ها دو فایل .gitignoreو .gitattributes در دراخل پروژه باعث میشه تغییرات به درد نخور مثل بین و دیباگ و ... ذخیره نشن

--- a/LampShade/ServiceHost/Pages/Shared/Components/ProductCategoryWithProduct/Default.cshtml
+++ b/LampShade/ServiceHost/Pages/Shared/Components/ProductCategoryWithProduct/Default.cshtml
@@ -67,7 +67,7 @@
 
 
                                                         <a asp-page="/Product" asp-route-id="@product.Slug">
-                                                            <img src="@product.Picture" title="@product.PictureTitle" class="img-fluid"
+                                                            <img src="~/ProductPictures/@product.Picture" title="@product.PictureTitle" class="img-fluid"
                                                                  alt="@product.PictureAlt">
                                                         </a>
                                                     </div>
