--- a/LampShade/ServiceHost/Areas/Administration/Pages/Shop/Slides/Create.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Shop/Slides/Create.cshtml
@@ -21,7 +21,7 @@
                 <div class="form-group">
                     <label asp-for="Picture" class="control-label">عکس</label>
                     @*<input type="file" class="form-control" asp-for="Picture" accept="image/*">*@
-                    <input type="text" class="form-control" asp-for="Picture">
+                    <input type="file" class="form-control" asp-for="Picture" accept="image/*">
                     <span asp-validation-for="Picture" class="error"></span>
                 </div>
             </div>
@@ -42,7 +42,7 @@
                 </div>
             </div>
         </div>  @*row*@
-    <div class="row">
+        <div class="row">
         <div class="col-md-6">
             <div class="form-group">
                 <label asp-for="Text" class="control-label">متن</label>
@@ -59,7 +59,7 @@
             </div>
         </div>
     </div>  @*row*@
-    <div class="row">
+        <div class="row">
         <div class="col-md-12">
             <div class="form-group">
                 <label asp-for="BtnText" class="control-label">متن دکمه</label>
