--- a/LampShade/ServiceHost/Areas/Administration/Pages/Shop/Slides/Index.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Shop/Slides/Index.cshtml
@@ -45,7 +45,7 @@
                                 <tr>
                                     <td>@item.ID</td>
                                     <td>
-                                        <img src="@item.Picture" style="width: 80px; height: 50px" />
+                                        <img src="~/ProductPictures/@item.Picture" style="width: 80px; height: 50px" />
                                     </td>
                                     <td>@item.Heading</td>
                                     <td>@item.Title</td>
