--- a/LampShade/ServiceHost/Pages/Shared/Components/LatestArrivals/Default.cshtml
+++ b/LampShade/ServiceHost/Pages/Shared/Components/LatestArrivals/Default.cshtml
@@ -56,7 +56,7 @@
                                             <span class="new">جدید</span>
 </div>
                                         <a href="single-product.html">
-                                            <img src="@product.Picture" class="img-fluid" alt="@product.PictureAlt" title="@product.PictureTitle">
+                                            <img src="~/ProductPictures/@product.Picture" class="img-fluid" alt="@product.PictureAlt" title="@product.PictureTitle">
 
                                         </a>
                                     </div>
