--- a/LampShade/ServiceHost/Pages/Shared/Components/Productcategory/Default.cshtml
+++ b/LampShade/ServiceHost/Pages/Shared/Components/Productcategory/Default.cshtml
@@ -15,7 +15,7 @@
                                     <div class="single-category-item__image">
                                         @*///asp-route-id="@item.Slug" for Seoooooooooooooooo*@
                                         <a asp-page="/ProductCategory" asp-route-id="@item.Slug">
-                                            <img src="@item.Picture" class="img-fluid" alt="@item.PictureAlt" title="@item.PictureTitle">
+                                            <img src="~/ProductPictures/@item.Picture" class="img-fluid" alt="@item.PictureAlt" title="@item.PictureTitle">
                                         </a>
                                     </div>
                                     <div class="single-category-item__content">
