--- a/LampShade/ServiceHost/Pages/Shared/Components/ProductCategoryWithProduct/Default.cshtml
+++ b/LampShade/ServiceHost/Pages/Shared/Components/ProductCategoryWithProduct/Default.cshtml
@@ -27,8 +27,6 @@
                     <div class="tab-content">
                         @foreach (var category in Model)
                         {
-                            //برای اینکه اکتیو بودن بت رو مشخص کنیم
-                            //در حقییقت یک if , else است
                             <div class="tab-pane fade show @(Model.First() == category ? "active" : "")" id="product-series-@category.Id" role="tabpanel"
                                  aria-labelledby="product-tab-1">
                                 <div class="single-row-slider-wrapper">
@@ -53,9 +51,7 @@
                             ]'>
                                         @foreach (var product in category.Products)
                                         {
-
-
-<div class="col">
+                                            <div class="col">
                                                 <div class="single-grid-product">
                                                     <div class="single-grid-product__image">
                                                         @if (product.HasDiscount)
@@ -64,8 +60,6 @@
                                                                 <span class="sale">-@product.DiscountRate%</span>
                                                             </div>
                                                         }
-
-
                                                         <a asp-page="/Product" asp-route-id="@product.Slug">
                                                             <img src="~/ProductPictures/@product.Picture" title="@product.PictureTitle" class="img-fluid"
                                                                  alt="@product.PictureAlt">
@@ -91,19 +85,15 @@
                                                             </a>
                                                         </h3>
                                                         <p class="single-grid-product__price">
-                                                            
-                                                            @if(@product.HasDiscount)
+                                                            @if (product.HasDiscount)
                                                             {
-                                                            <span class="discounted-price">@product.PriceWithDiscount تومان</span>
-                                                            <span class="main-price discounted">@product.Price تومان</span>
+                                                                <span class="discounted-price">@product.PriceWithDiscount تومان</span>
+                                                                <span class="main-price discounted">@product.Price تومان</span>
                                                             }
-                                                            else{
+                                                            else
+                                                            {
                                                                 <span class="main-price">@product.Price تومان</span>
                                                             }
-
-
-                                                           
-                                                           
                                                         </p>
                                                     </div>
                                                 </div>
