پیاده سازی کامل کامنتینگ در محصولات

--- a/LampShade/ServiceHost/Areas/Administration/Pages/Comment/Comment/Index.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Comment/Comment/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model ServiceHost.Areas.Administration.Pages.Comment.ProductComment.IndexModel
+@model ServiceHost.Areas.Administration.Pages.Comment.Comment.IndexModel
 @{
 }
 @{
@@ -84,7 +84,7 @@
                                         }
                                         else if (!item.IsCanceled && item.IsConfirm)
                                         {
-                                            <i class=" text-warning">تا</i>
+                                            <i class=" text-success">تایید شده</i>
 
                                         }
                                     </td>
