--- a/LampShade/ServiceHost/Areas/Administration/Pages/Shared/_Menu.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Shared/_Menu.cshtml
@@ -45,6 +45,14 @@
 
                     </ul>
                 </li>
+                <li class="has_sub">
+                    <a class="waves-effect"><i class="md md-mail"></i><span> سیستم بلاگینگ </span><span class="pull-right"><i class="md md-add"></i></span></a>
+                    <ul class="list-unstyled">
+                        <li><a asp-page="/blog/Articles/Index">مقالات</a></li>
+                        <li><a asp-page="/blog/ArticleCategories/Index">گروه مقالات</a></li>
+
+                    </ul>
+                </li>
                 @*oder menu*@
                 @*<li>
             <a href="calendar.html" class="waves-effect"><i class="md md-event"></i><span> Calendar </span></a>
