--- a/LampShade/ServiceHost/Areas/Administration/Pages/Blog/ArticleCategories/Create.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Blog/ArticleCategories/Create.cshtml
@@ -13,7 +13,7 @@
       data-callback=""
       data-action="Refresh"
       enctype="multipart/form-data">
-    <div class="modal-body">
+        <div class="modal-body">
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group">
@@ -86,16 +86,25 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12">
-                <div class="form-group no-margin">
-                    <label asp-for="MetaDescription" class="control-label">توضیحات متا</label>
-                    <textarea class="form-control autogrow" asp-for="MetaDescription"
+        <div class="col-md-12">
+            <div class="form-group no-margin">
+                <label asp-for="MetaDescription" class="control-label">توضیحات متا</label>
+                <textarea class="form-control autogrow" asp-for="MetaDescription"
                               style="overflow: hidden; word-wrap: break-word; resize: horizontal; height: 104px;"></textarea>
-                    <span asp-validation-for="MetaDescription" class="error"></span>
-                </div>
+                <span asp-validation-for="MetaDescription" class="error"></span>
             </div>
         </div>
     </div>
+        <div class="row">
+    <div class="col-md-12">
+        <div class="form-group">
+            <label asp-for="CanonicalAddress" class="control-label">CanonicalAddress</label>
+            <input type="text" class="form-control" asp-for="CanonicalAddress">
+            <span asp-validation-for="CanonicalAddress" class="error"></span>
+        </div>
+    </div>
+    </div>
+ 
     <div class="modal-footer">
         <button type="button" class="btn btn-default waves-effect" data-dismiss="modal">بستن</button>
         <button type="submit" class="btn btn-info waves-effect waves-light">ایجاد</button>
