--- a/LampShade/ServiceHost/Areas/Administration/Pages/Blog/Articles/Create.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Blog/Articles/Create.cshtml
@@ -17,21 +17,29 @@
                       enctype="multipart/form-data">
                 
                             <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="form-group">
-                                            <label asp-for="Command.Title" class="control-label">نام</label>
+                                <div class="col-md-4">
+                                    <div class="form-group">
+                                        <label asp-for="Command.Title" class="control-label">نام</label>
 
-                                            @*dar jqueery site.js makeslug vojod dare va baese poor shodan khodkare Slug az name mishe*@
-                                            <input type="text" class="form-control" asp-for="Command.Title" onchange="makeSlug('Title', 'Slug')">
-                                            <span asp-validation-for="Command.Title" class="error"></span>
-                                        </div>
-                                    </div><div class="col-md-6">
-                                        <div class="form-group">
-                                            <label asp-for="Command.Slug" class="control-label">اسلاگ</label>
-                                            <input type="text" class="form-control" asp-for="Command.Slug">
-                                            <span asp-validation-for="Command.Slug" class="error"></span>
-                                        </div>
+                                        @*dar jqueery site.js makeslug vojod dare va baese poor shodan khodkare Slug az name mishe*@
+                                        <input type="text" class="form-control" asp-for="Command.Title" onchange="makeSlug('Title', 'Slug')">
+                                        <span asp-validation-for="Command.Title" class="error"></span>
                                     </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="form-group">
+                                        <label asp-for="Command.Slug" class="control-label">اسلاگ</label>
+                                        <input type="text" class="form-control" asp-for="Command.Slug">
+                                        <span asp-validation-for="Command.Slug" class="error"></span>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="form-group">
+                                        <label asp-for="Command.PublishDate" class="control-label">تاریخ انتشار</label>
+                                        <input  class="form-control PersianDateInput" asp-for="Command.PublishDate">
+                                        <span asp-validation-for="Command.PublishDate" class="error"></span>
+                                    </div>
+                                </div>
                                 </div>
                             <div class="row">
                                     <div class="col-md-6">
@@ -83,7 +91,7 @@
                         <div class="col-md-12">
                             <div class="form-group no-margin">
                                 <label asp-for="Command.Description" class="control-label">توضیحات</label>
-                                <textarea class="form-control autogrow" asp-for="Command.Description"></textarea>
+                                <textarea class="form-control" id="BodyContent" asp-for="Command.Description"></textarea>
                                 <span asp-validation-for="Command.Description" class="error"></span>
                             </div>
                         </div>
