--- a/LampShade/ServiceHost/Pages/Index.cshtml
+++ b/LampShade/ServiceHost/Pages/Index.cshtml
@@ -83,7 +83,7 @@
                                     <img src="~/Theme/assets/img/icons/free_shipping.png" class="img-fluid" alt="">
                                 </div>
                                 <div class="single-feature-logo__content">
-                                    <h4 class="title">FREE SHIPPING WORLDWIDE</h4>
+                                    <h4 class="title">FREE SHIPPING WORLDWIdE</h4>
                                     <p class="short-desc">
                                         We offer free shipping via Standard Shipping on orders
                                         over $200.00
