--- a/LampShade/ServiceHost/Pages/Article.cshtml
+++ b/LampShade/ServiceHost/Pages/Article.cshtml
@@ -284,39 +284,18 @@
                                     <!--=======  single sidebar widget  =======-->
                                     <div class="single-sidebar-widget">
 
-                                        <h4 class="single-sidebar-widget__title">Categories</h4>
+                                        <h4 class="single-sidebar-widget__title">گروه مقالات</h4>
                                         <ul class="single-sidebar-widget__category-list">
-                                            <li class="has-children">
-                                                <a href="#" class="active">
-                                                    Accessories <span class="counter">15</span>
-                                                </a>
-                                                <ul>
-                                                    <li>
-                                                        <a href="#">Brushes <span class="counter">3</span></a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#">Mascara <span class="counter">5</span></a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#">Eye Shadow <span class="counter">1</span></a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#">Eye Brushes <span class="counter">7</span></a>
-                                                    </li>
-                                                </ul>
-                                            </li>
-                                            <li>
-                                                <a href="#">Car Seats <span class="counter">7</span></a>
-                                            </li>
-                                            <li>
-                                                <a href="#">Chair <span class="counter">11</span></a>
-                                            </li>
-                                            <li>
-                                                <a href="#">Engine Parts <span class="counter">17</span></a>
-                                            </li>
-                                            <li>
-                                                <a href="#">Sofas <span class="counter">13</span></a>
-                                            </li>
+                                            @foreach (var category in @Model.ArticleCategories)
+                                            {
+                                                <li class="has-children">
+                                                    <a asp-page="/ArticleCategory" asp-route-id="@category.Slug" class="active">
+                                                        @category.Name <span class="counter">@category.ArticleCount</span>
+                                                    </a>
+                                                </li>
+                                            }
+                                            
+
 
                                         </ul>
                                     </div>
