--- a/LampShade/ServiceHost/Pages/Product.cshtml
+++ b/LampShade/ServiceHost/Pages/Product.cshtml
@@ -311,7 +311,7 @@
                                                                 </div>
                                                                 <input type="hidden" name="ownerRecordId" value="@Model.Product.Id" />
                                                                 @*<input type="hidden" name="type" value="@CommnetManagement.Infrastructure.EFCore.CommentType.Product" />*@
-                                                                <input type="hidden" name="productSlug" value="@Model.Product.Slug" />
+                                                                <input type="hidden" name="ArticleSlug" value="@Model.Product.Slug" />
                                                                 <div class="col-12">
                                                                     <input value="ارسال" type="submit">
                                                                 </div>
