--- a/LampShade/ServiceHost/Pages/Article.cshtml
+++ b/LampShade/ServiceHost/Pages/Article.cshtml
@@ -1,6 +1,7 @@
 ﻿@*//"{id}"*@
 @*برای اینکه آدرس دهی درست باشه*@
 @page "{id}"
+@using BlogManagement.Domain.ArticleAgg
 @model ServiceHost.Pages.ArticleModel
 @{
 
@@ -230,46 +231,46 @@
                                         <!--=======  comment form container  =======-->
 
                                         <div class="comment-form-container">
-                                            <h3 class="comment-form-title">LEAVE A REPLY</h3>
+                                            <h3 class="comment-form-title">نظرات خود را با ما به اشتراک بگذارید</h3>
                                             <p>
-                                                Your email address will not be published. Required fields are marked
-                                                *
+                                                ایمیل وارد شده توسط شما به صورت محرمانه است و به هیچ کس نمایش داده نخواهد شد.
                                             </p>
 
                                             <!--=======  comment form  =======-->
 
                                             <div class="comment-form">
-                                                <form action="#">
+                                                <form method="post">
                                                     <div class="row">
                                                         <div class="col-lg-12">
                                                             <div class="form-group">
-                                                                <label>Comment</label>
-                                                                <textarea name="commentMessage"
-                                                                          id="commentMessage"></textarea>
+                                                                <label>نظر شما</label>
+                                                                <textarea name="message" placeholder="نظر خود را وارد کنید..." id="message"></textarea>
                                                             </div>
                                                         </div>
                                                         <div class="col-lg-4">
                                                             <div class="form-group">
-                                                                <label>Name <span class="required">*</span></label>
-                                                                <input type="text" name="commenterName">
+                                                                <label>نام <span class="required">*</span></label>
+                                                                <input type="text" name="Name" placeholder="علی علوی">
                                                             </div>
                                                         </div>
                                                         <div class="col-lg-4">
                                                             <div class="form-group">
-                                                                <label>Email <span class="required">*</span></label>
-                                                                <input type="text" name="commenterEmail">
+                                                                <label>ایمل <span class="required">*</span></label>
+                                                                <input type="text" name="Email" placeholder="pazdar.ali@gmail.com">
                                                             </div>
                                                         </div>
                                                         <div class="col-lg-4">
                                                             <div class="form-group">
-                                                                <label>Website</label>
-                                                                <input type="text" name="commenterWebsite">
+                                                                <label>وب سایت</label>
+                                                                <input type="text" name="Website" placeholder="www.CarGlass.ir">
                                                             </div>
                                                         </div>
+                                                        <input type="hidden" name="ownerRecordId" value="@Model.Article.Id" />
+                                                        <input type="hidden" name="articleslug" value="@Model.Article.Slug" />
+
                                                         <div class="col-lg-12">
-                                                            <button type="submit" class="comment-btn"
-                                                                    name="submit">
-                                                                post comment
+                                                            <button type="submit" class="comment-btn" name="submit">
+                                                                ارسال
                                                             </button>
                                                         </div>
                                                     </div>
